# robotpeginhole

./: .gitignore  README.md
Pics/: GwenKitting.vsdx
crpi_test/: notes.docx  ~$notes.docx  ~WRL0871.tmp  ~WRL2952.tmp
crpi_test/doc/: Attaching to running crpi test program with VSCODE.docx  ExcelChart.txt  ROS1WindowsTerminalSetup.docx  Ros1WindowsMicrosoftInstallation.docx  TaskboardMeshes.ini
crpi_test/doc/Experiments/: ExperimentGzFTSensor.docx  ExperimentGzGuardedMovePlugin.docx  FTReadingsGuardedMove.xlsx
crpi_test/src/crpi/: CMakeLists.txt
crpi_test/src/crpi/src/: crpi.cpp  crpi_xml.cpp
crpi_test/src/crpi_math/: CMakeLists.txt  package.xml
crpi_test/src/crpi_math/src/: Filters.cpp  VectorMath.cpp
crpi_test/src/gazebo_plugins2/: CMakeLists.txt
crpi_test/src/gazebo_plugins2/src/: gazebo_ros_ft_sensor.cpp
crpi_test/src/gazebo_plugins2/srv/: GetJointsProperties.srv
crpi_test/src/motion_prims/: CMakeLists.txt  Makefile  package.xml
crpi_test/src/orocos_kdl/: CMakeLists.txt
crpi_test/src/robocalc/: CMakeLists.txt  package.xml
crpi_test/src/robocalc/src/: robocalc.cpp
crpi_test/src/test_gazebo_package/: CMakeLists.txt  package.xml
crpi_test/src/test_gazebo_package/src/: TestGazeboRobot.cpp  crpi_gazebo.cpp  experiment.cpp  scraps.txt  stdafx.cpp  wm.cpp
crpi_test/src/ulapi/: package.xml
documentation/: paper.md
documentation/template/: abstract_template.tex  asme2e.bib  asme2e.tex
gzpegboard/: gzpegboard.docx  notes.docx  readme.md  setuptaskboard.bash  taskboard.sdf  ~$Readme.docx
gzpegboard/STL/: taskboard-arrayback-1.STL  taskboard-arrayback-1_Rotatex_Centered_ZeroZmin.stl  taskboard-pegarray1-1.STL  taskboard-pegarray2-1.STL  taskboard_arraybase-1.STL  taskboard_round_peg-1.STL  taskboard_square_peg-1.STL  taskboard_square_peg-1_Rotatex_Centered_ZeroZmin.stl
gzpegboard/Worlds/: Readme.md  aprs-lab - Copy.world  aprs-lab fanuconly.world  aprs-lab-V2.world  aprs-lab-V6.world  aprs-lab.world  camera.world  fanuc_taskboard.world  motoman_gears.world  motoman_taskboard.world  robots.world  safety_system.world  world_setup.bash
gzpegboard/Worlds/Templates/: camera_template.world  fanuc_gears_3Dprinting.world  fanuc_taskboard.world  gzvisionsim_template.world  large_gear.inc  medium_gear.inc  motoman_taskboard (workonconveyor).world  motoman_taskboard (works).world  motoman_taskboard.world  motoman_taskfeeder.world  office_furniture.world  physics_template.world  robots_template.world  safety_system_template.world
gzpegboard/Worlds/Working/: aprs-lab-feeder.world  aprs-lab.world
gzpegboard/doc/: How To Install & Use The New Windows 10 Terminal.docx
gzpegboard/doc/info/: taskboard-arrayback-1_Rotatex_Centered_ZeroZmin.ini  taskboard-pegarray1-1_Rotatex_Centered_ZeroZmin.ini  taskboard-pegarray2-1_Rotatex_Centered_ZeroZmin.ini  taskboard_arraybase-1_Rotatex_Centered_ZeroZmin.ini  taskboard_round_peg-1_Centered_ZeroZmin.ini  taskboard_square_peg-1_Rotatex_Centered_ZeroZmin.ini
gzpegboard/gzdatabase/media/skyx/: SkyX.material  SkyX_Clouds.fragment  SkyX_Ground.hlsl  SkyX_Ground.vertex  SkyX_Moon.hlsl  SkyX_Moon.vertex  SkyX_Skydome.fragment
gzpegboard/gzdatabase/models/Agility_lab/: model.config  model.sdf
gzpegboard/gzdatabase/models/Lab_Model/: Lab_Model.sdf  model.config
gzpegboard/gzdatabase/models/Lab_Tables/: Lab_Model.sdf  model.config
gzpegboard/gzdatabase/models/Lab_Wall/: Lab_Model.sdf  model.config
gzpegboard/gzdatabase/models/Large_Gear/: large_gear_inertia.inc  model (copy).sdf  model.config  model.sdf
gzpegboard/gzdatabase/models/Medium_Gear/: model.config  model.sdf
gzpegboard/gzdatabase/models/Metal_Peg_v2/: model.config  model.sdf
gzpegboard/gzdatabase/models/Small_Gear/: model.config  model.sdf
gzpegboard/gzdatabase/models/TV/: model.config  model.sdf
gzpegboard/gzdatabase/models/cabinet_test/: model.config  model.sdf
gzpegboard/gzdatabase/models/chair/: model.config  model.sdf
gzpegboard/gzdatabase/models/computer_table/: model.config  model.sdf
gzpegboard/gzdatabase/models/conference_table/: model.config  model.sdf
gzpegboard/gzdatabase/models/conveyor/: model.config  model.sdf  model_2.sdf  model_3.sdf
gzpegboard/gzdatabase/models/conveyor_belt/: model.config  model.sdf
gzpegboard/gzdatabase/models/fanuc_camera_test/: model.config  model.sdf
gzpegboard/gzdatabase/models/fanuc_lrmate200id/: fanuc_finger_Inertia.inc  fanuc_gripper-issues.sdf  fanuc_gripper.sdf  fanuc_gripper_pavel.sdf  fanuc_gripper_peter-orig.sdf  fanuc_gripper_peter-pavel.sdf  fanuc_gripper_peter.sdf  final_fanuc_gripper.sdf  final_fanuc_gripper.urdf  model-save.sdf  model.config  model.sdf
gzpegboard/gzdatabase/models/fanuc_lrmate200id_support/: model.config
gzpegboard/gzdatabase/models/gear_support/: model.config
gzpegboard/pluginswin/: gripper_plugin.dll.works
gzpegboard/src/crpi/: package.xml
gzpegboard/src/fanuc_lrmate200id_support/: CMakeLists.txt  package.xml
gzpegboard/src/gazebo_plugins2/: CMakeLists.txt  package.xml
gzpegboard/src/gazebo_plugins2/include/gazebo_plugins2/: gazebo_ros_guarded_move.h
gzpegboard/src/gazebo_plugins2/src/: gazebo_ros_guarded_move.cpp  gazebo_ros_joint_state_publisher.cpp
gzpegboard/src/gazebo_plugins2/srv/: GuardedMove.srv
gzpegboard/src/gripper_plugin/: CMakeLists - NoGazeboPkg.txt  CMakeLists.txt  package.xml
gzpegboard/src/guardedmove_plugin/: CMakeLists.txt  package.xml
gzpegboard/src/motion_prims/: CMakeLists.txt  package.xml
gzpegboard/src/orocos_kdl/: CMakeLists.txt  package.xml
gzpegboard/src/py_joint_state_pub/: CMakeLists.txt  joint_state_publisher  joint_status.bash  joint_status.bat  package.xml  setup.py
gzpegboard/src/py_joint_state_pub/launch/: test.launch
gzpegboard/src/py_joint_state_pub/scripts/: gazebo_joint_publisher.py  py_joint_state_pub
gzpegboard/src/py_joint_state_pub/src/py_joint_state_pub/: __init__.py
gzpegboard/src/py_joint_state_pub/src/py_joint_state_pub.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gzpegboard/src/test_gazebo_package/: CMakeLists.txt
gzpegboard/src/ulapi/: CMakeLists.txt
(+371 files in other folders)
